eShopMicroService/infrastructure/tracing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing-ingress
  namespace: tracing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 4.220.25.50.nip.io
      http:
        paths:
          - path: /zipkin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
          - path: /jaeger(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686
